--- a/DYEat/src/main/resources/application.yml
+++ b/DYEat/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
         enabled: true
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         #        show_sql: true
