--- a/DYEat/src/main/resources/application.yml
+++ b/DYEat/src/main/resources/application.yml
@@ -5,6 +5,12 @@ spring:
     password: doyoueat96
     driver-class-name: org.mariadb.jdbc.Driver
 
+  servlet:
+    multipart:
+      enabled: true
+
+
+
   devtools:
       livereload:
         enabled: true
@@ -15,6 +21,14 @@ spring:
       hibernate:
         #        show_sql: true
         format_sql: true
+
+  logging:
+    level:
+      org:
+        apache:
+          coyote:
+            http11: debug
+
 
   security:
     oauth2:
@@ -44,6 +58,8 @@ spring:
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
 
+file:
+  dir: C:/Users/dmstj/OneDrive/Desktop/file/
 
 
 
